# vendetta-markets-contracts

./: .gitignore  Cargo.toml  Makefile.toml  README.md  schema.Makefile.toml
.cargo/: config.toml
.github/workflows/: ci.yml
contracts/fixed-odds-market/: Cargo.toml  README  README.md
contracts/fixed-odds-market/schema/: fixed-odds-market.json
contracts/fixed-odds-market/src/: contract.rs  error.rs  execute.rs  integration_tests.rs  lib.rs  logic.rs  msg.rs  queries.rs  state.rs  validation.rs
contracts/fixed-odds-market/tests/: helpers.rs  tests.rs
contracts/parimutuel-market/: .gitignore  Cargo.toml  README  README.md
contracts/parimutuel-market/.cargo/: config.toml
contracts/parimutuel-market/src/: contract.rs  error.rs  execute.rs  helpers.rs  integration_tests.rs  lib.rs  logic.rs  msg.rs  queries.rs  state.rs  validation.rs
contracts/parimutuel-market/tests/: helpers.rs  tests.rs
schemas/fixed-odds-market/: fixed-odds-market.json
schemas/parimutuel-market/: parimutuel-market.json
